--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body.tour-active .content { display: block; height: auto; }
 .hidden { display: none !important; }
 #back-to-home-btn { position: fixed; top: 30px; left: 30px; z-index: 2000; width: 50px; height: 50px; background: rgba(255, 255, 255, 0.1); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.2); border-radius: 50%; color: var(--color-texto-principal); display: flex; justify-content: center; align-items: center; text-decoration: none; transition: all 0.3s ease; cursor: pointer; }
 #back-to-home-btn:hover { transform: scale(1.1); background: rgba(255, 255, 255, 0.2); }
-.hero-section { display: flex; flex-direction: column; align-items: center; text-align: center; max-width: 800px; padding: 20px; }
+.hero-section {align-items: center; text-align: center; max-width: 800px; margin: 0 auto; padding: 50px 20px; color: var(--color-texto-principal); }
 h1 { font-size: 3.5rem; font-weight: 700; margin-bottom: 20px; text-shadow: 0 0 10px rgba(226, 132, 24, 0.5); }
 h2 { font-size: 2.8rem; margin-bottom: 50px; text-shadow: 0 0 10px rgba(226, 132, 24, 0.5); }
 .welcome-message { font-size: 1.2rem; margin-top: 15px; max-width: 500px; }
@@ -18,7 +18,7 @@ h2 { font-size: 2.8rem; margin-bottom: 50px; text-shadow: 0 0 10px rgba(226, 132
 .cta-button:hover { background-color: var(--color-texto-principal); color: var(--color-casi-negro); }
 .cta-button.primary { background-color: var(--color-naranja-vibrante); border-color: var(--color-naranja-vibrante); }
 .cta-button.primary:hover { background-color: var(--color-texto-principal); border-color: var(--color-texto-principal); color: var(--color-naranja-vibrante); }
-.hero-logo-container { margin-bottom: 20px; }
+.hero-logo-container { margin-bottom: 10px; }
 .hero-logo { max-width: 200px; height: auto; animation: fadeIn 1s 0.2s ease-out forwards, pulse 2.5s ease-in-out 1.2s infinite; opacity: 0; }
 #demo-container { display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 20px; }
 .video-container { position: relative; display: flex; justify-content: center; align-items: center; background-color: #1a1a1a; border-radius: 10px; box-shadow: 0 0 20px rgba(226, 132, 24, 0.5); overflow: hidden; max-width: 90vw; }
